--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "inquirer": "^8.0.0",
     "joi": "^17.9.2",
     "mysql2": "^3.4.2",
+    "reflect-metadata": "^0.1.13",
     "typeorm": "^0.3.17"
   }
 }
