--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "author": "Pehuen Assalone",
   "license": "ISC",
   "devDependencies": {
+    "@faker-js/faker": "^8.0.2",
     "@types/express": "^4.17.17",
     "@types/inquirer": "^9.0.3",
     "@types/node": "^20.3.2",
