--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "typescript": "^5.1.3"
   },
   "dependencies": {
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "inquirer": "^8.0.0",
     "joi": "^17.9.2",
