--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Este es el backend de una aplicación que permite gestionar una lista de productos. Proporciona endpoints para crear, obtener, actualizar y eliminar productos de una base de datos relacional.",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "npx jest",
     "start:dev": "npx nodemon",
     "build": "rimraf ./build && tsc",
     "start": "npm run build && node build/app.js",
@@ -13,15 +13,27 @@
   "author": "Pehuen Assalone",
   "license": "ISC",
   "devDependencies": {
+    "@babel/core": "^7.22.5",
+    "@babel/plugin-proposal-decorators": "^7.22.5",
+    "@babel/plugin-syntax-decorators": "^7.22.5",
+    "@babel/plugin-transform-modules-commonjs": "^7.22.5",
+    "@babel/preset-env": "^7.22.5",
+    "@babel/preset-typescript": "^7.22.5",
     "@faker-js/faker": "^8.0.2",
+    "@jest/globals": "^29.5.0",
     "@types/express": "^4.17.17",
     "@types/inquirer": "^9.0.3",
+    "@types/jest": "^29.5.2",
     "@types/node": "^20.3.2",
     "@typescript-eslint/eslint-plugin": "^5.60.1",
     "@typescript-eslint/parser": "^5.60.1",
+    "babel-jest": "^29.5.0",
     "eslint": "^8.43.0",
+    "eslint-plugin-jest": "^27.2.2",
+    "jest": "^29.5.0",
     "nodemon": "^2.0.22",
     "rimraf": "^5.0.1",
+    "ts-jest": "^29.1.1",
     "ts-node": "^10.9.1",
     "typescript": "^5.1.3"
   },
